# Deep-Research-Agent

./: .gitignore  README.md  pyproject.toml  temp.py  tempo
src/: main.py
src/agents/: citation_agent.py  lead_researcher.py  subagent.py
src/graph/: workflow.py
src/state/: schema.py
src/tools/: search.py
src/utils/: llm_provider.py  memory.py  todo_manager.py
